--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 build-cli:
-  stage: build-cli
+  stage: build
   image: docker:latest
   services:
     - docker:dind
@@ -7,4 +7,8 @@ build-cli:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker build -t $CI_REGISTRY_IMAGE .
     - docker push $CI_REGISTRY_IMAGE
-
+    
+deploy:
+  stage: deploy
+  script:
+    - curl -X POST -data=""  https://deliverous.com/api/v1/trigger/$DELIVEROUS_TRIGGER
